--- a/Assets/UI/StartMenu/StartMenu.uxml
+++ b/Assets/UI/StartMenu/StartMenu.uxml
@@ -2,7 +2,7 @@
     <ui:Template name="StartMenuLeftButtonList" src="project://database/Assets/UI/StartMenu/StartMenuLeftButtonList.uxml?fileID=9197481963319205126&amp;guid=e0062c68143b2cd48b0e687a6144bea8&amp;type=3#StartMenuLeftButtonList" />
     <Style src="project://database/Assets/UI/GlobalStyle.uss?fileID=7433441132597879392&amp;guid=f0ad93f4675a6eb4ca96d53b5f7755c2&amp;type=3#GlobalStyle" />
     <Style src="project://database/Assets/UI/StartMenu/StartMenu.uss?fileID=7433441132597879392&amp;guid=ce5377bcd60c47f49bda07bfe77e8e08&amp;type=3#StartMenu" />
-    <ui:VisualElement name="VisualElement" style="flex-grow: 1;">
-        <ui:Instance template="StartMenuLeftButtonList" name="left-button-list-template-container"/>
+    <ui:VisualElement style="flex-grow: 1;">
+        <ui:Instance template="StartMenuLeftButtonList" name="left-button-list-template-container" />
     </ui:VisualElement>
 </ui:UXML>
